# mb-spec-dev-dev

./: .gitignore  Makefile.am  README.md  compile.sh  configure.ac  my.configure-options
examples/: mb-spec.json
src/: .gitignore  Makefile.am
src/infrared/: .gitignore  Makefile.am  README.txt  dipole.cpp  dipole_omp.cpp  response.cpp  spectrum.cpp  test.cpp
src/power/: Makefile.am  README.txt  response.cpp  spectrum.cpp
src/raman/: .gitignore  Makefile.am  README.txt  polarizability.cpp  response  response.cpp  response_depolarized  response_depolarized.cpp  response_isotropic  response_isotropic.cpp  spectrum.cpp
src/sfg/: .gitignore  Makefile.am  response.cpp  spectrum.cpp
src/sfg/fresnel_factors/: calculate_sfg_spectra.py  refractive_index_water_k.txt  refractive_index_water_n.txt
src/tools/: Makefile.am  alpha-el-poly2b3.cpp  alpha-el-poly2b3.h  alpha-ttm4.cpp  alpha-ttm4.h  avila.cpp  avila.h  constants.h  dip_poly2b5.cpp  dip_poly2b5.h  io-tools.cpp  io-tools.h  lp-site.cpp  lp-site.h  ltp2011.cpp  ltp2011.h  macros.h  mat_tools.cpp  mat_tools.h  orient.cpp  orient.h  pbc-tools.cpp  pbc-tools.h  poly-l-2b3.cpp  poly-l-2b3.h  poly2b5.cpp  poly2b5.h  ps.cpp  ps.h  read-lammpstrj.cpp  read-lammpstrj.h  struct-lammpstrj-frame.h  struct-sfg-pols.h  system.cpp  system.h  ttm4-dip.cpp  ttm4-dip.h  ttm4-es.cpp  ttm4-es.h  ttm4-periodic-es.cpp  (+2 more)
